fix: portfolio gap

--- a/style.css
+++ b/style.css
@@ -1098,6 +1098,7 @@ body {
   .portfolio__works {
     /* Блочная модель */
     grid-template-columns: 1fr 1fr;
+    gap: 10px;
   }
 
   .site-footer__wrapper {
